--- a/index.html
+++ b/index.html
@@ -21,21 +21,22 @@
       <h1>Indirizzi e-mail</h1>
 
 
-      <div v-if="isLoaded" class="row">
+      <div v-if="isLoaded" class="row my-3">
         <div class="col">
-          <input class="form-control" type="number" placeholder="Scegli il numero di mail"  v-model.trim="inputItems">
+          <input class="form-control" type="number" placeholder="Scegli il numero di mail tra 1 e 100"  v-model.trim="inputItems">
         </div>
         <div class="col">
-          <button @click="InputGenerateList()" class="btn btn-info">Cerca</button>
+          <button @click="InputGenerateList()" class="btn btn-warning">Cerca</button>
         </div>
       </div>
+      <h5>{{errorMsg}}</h5>
 
       <ol v-if="isLoaded">
         <li v-for="(mail, index) in MailList">
           {{mail}}
         </li>
       </ol>
-      <h2 v-else>Loading...</h2>
+      <div v-else class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
     </div>
 
     <script src="js/script.js"></script>
